Add, Edit, and Delete working for Eat, Drink, and Be Merry

--- a/client/styles.css
+++ b/client/styles.css
@@ -7,11 +7,38 @@
 
 body {
     background-image: url("../images/nolaStreet.jpeg");
+    background-size: 100% 100%;
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-color: var(--black);
     font-family: 'Play', sans-serif;;
 }
+
+/* #bg {
+    position: fixed; 
+    top: -50%; 
+    left: -50%; 
+    width: 200%; 
+    height: 200%;
+  }
+  #bg img {
+    position: absolute; 
+    top: 0; 
+    left: 0; 
+    right: 0; 
+    bottom: 0; 
+    margin: auto; 
+    min-width: 50%;
+    min-height: 50%;
+  } */
+
+/* html { 
+    background: url ("../images/nolaStreet.jpeg") no-repeat center center fixed; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+  } */
 
 new-eat {
     background-color: black;
